--- a/src/main/webapp/partials/landing.html
+++ b/src/main/webapp/partials/landing.html
@@ -1,3 +1,5 @@
 <div class = "jumbotron">
+<blockquote class = "blockquote text-center">
 	<h2 class = "mb-0">X-men...Welcome...To DIE!</h2>
+	</blockquote>
 </div>
