--- a/src/main/webapp/partials/login.html
+++ b/src/main/webapp/partials/login.html
@@ -15,5 +15,12 @@
 			<input type = "text" id = "password" name = "password" required>
 		</div>
 	</div>
-	<input type = "button" id = "submit_btn" name = "submit_btn">
+	<div class = "row">
+	<div class = "form-group col-md-1">
+	<input type = "button" id = "submit_btn" name = "submit_btn" value = "Login">
+	</div>
+	<div class = "form-group col-md-6">
+	<div id = "sign_error"></div>
+	</div>
+	</div>
 </div>
