--- a/src/main/webapp/partials/login.html
+++ b/src/main/webapp/partials/login.html
@@ -12,7 +12,7 @@
 			<label for = "password">Password: </label>
 		</div>
 		<div class="form-group col-md-1">
-			<input type = "text" id = "password" name = "password" required>
+			<input type = "password" id = "password" name = "password" required>
 		</div>
 	</div>
 	<div class = "row">
@@ -20,7 +20,7 @@
 	<input type = "button" id = "submit_btn" name = "submit_btn" value = "Login">
 	</div>
 	<div class = "form-group col-md-6">
-	<div id = "sign_error"></div>
+	<div id = "error_message"></div>
 	</div>
 	</div>
 </div>
