sign in validations working!

--- a/src/main/webapp/partials/landing.html
+++ b/src/main/webapp/partials/landing.html
@@ -1,5 +1,5 @@
 <div class = "jumbotron">
 <blockquote class = "blockquote text-center">
-	<h2 class = "mb-0">X-men...Welcome...To DIE!</h2>
+	<h2 class = "mb-0">Welcome to the Expense Reimbursement System!</h2>
 	</blockquote>
 </div>
